--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.3.1",
     "next": "latest",
+    "prisma": "^5.3.1",
     "react": "latest",
     "react-dom": "latest",
     "sass": "^1.68.0"
