--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@prisma/client": "^5.3.1",
     "next": "latest",
     "next-auth": "^4.23.2",
+    "nodemailer": "^6.9.5",
     "prisma": "^5.3.1",
     "react": "latest",
     "react-dom": "latest",
