--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "@heroicons/react": "^2.0.18",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.3.1",
+    "@radix-ui/react-avatar": "^1.0.4",
+    "clsx": "^2.0.0",
     "next": "latest",
     "next-auth": "^4.23.2",
     "nodemailer": "^6.9.5",
     "prisma": "^5.3.1",
     "react": "latest",
     "react-dom": "latest",
-    "sass": "^1.68.0"
+    "sass": "^1.68.0",
+    "tailwind-merge": "^1.14.0"
   },
   "devDependencies": {
     "@types/node": "latest",
