--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.3.1",
     "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "clsx": "^2.0.0",
     "next": "latest",
     "next-auth": "^4.23.2",
