--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "clsx": "^2.0.0",
+    "date-fns": "^2.30.0",
     "next": "latest",
     "next-auth": "^4.23.2",
     "nodemailer": "^6.9.5",
