--- a/package.json
+++ b/package.json
@@ -17,13 +17,14 @@
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-select": "^2.0.0",
+    "@types/next-auth": "^3.15.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
     "date-fns": "^2.30.0",
     "lucide-react": "^0.286.0",
     "next": "latest",
-    "next-auth": "^4.23.2",
+    "next-auth": "^4.24.4",
     "nodemailer": "^6.9.5",
     "prisma": "^5.3.1",
     "react": "latest",
