add email login

--- a/.env.sample
+++ b/.env.sample
@@ -4,6 +4,10 @@ GITHUB_SECRET=""
 DISCORD_CLIENT_ID=
 DISCORD_CLIENT_SECRET=
 
+# Email provider
+EMAIL_SERVER=
+EMAIL_FROM=
+
 JWT_SECRET=""
 
 DATABASE_URL=""
